--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
                     <a href="sobremim.html">Sobre Mim</a>
                 </li>
                 <li>
-                    <a href="projetos.html">Projetos</a>
+                    <div class="projetos-button">
+                        <button class="button">Projetos &nbsp; ▼</button>
+                        <div class="dropdown-content">
+                          <a id="top" href="EMDS.html">Desenvolvimento Sistemas</a>
+                          <a id="middle" href="FTC.html">FTC-Robótica</a>
+                          <a id="bottom" href="IC.html">In.Científica</a>
+                        </div>
+                      </div>
+                      
                 </li>
+                
                 <button>Meu contato</button>
             </div>    
         </header>
